# Smoothy

./: .env  .gitignore  403 error.txt  Cargo.toml  Discord Invite Link - Test Bot.txt  Discord Invite Link.txt  Dockerfile  Help.md  README.md  Run Smoothy.deps.json  Run Smoothy.dll.config  RunSmoothy.deps.json  RunSmoothy.dll.config  bash.exe.stackdump  econnrest error.txt  error log.txt  errorlog.txt  examples.js  executive.js  executive.ts  ideas.txt  main - Copy.js  main.js  modules.js  nodemon.json  package-lock.json  package.json  run.bat  run.sh  tsconfig.json
Classes/: Idle.ts  Queue.js  Queue.ts  Song.js  Song.ts  WriteMessage.ts  WriteQueue.js  WriteQueue.ts
Classes/functions/: audioPlayerIdle.js  audioPlayerIdle.ts  durationCheck.ts  executive.js  executive.ts  (+6 more)
RunSmoothy/: Run Smoothy.deps.json  Run Smoothy.dll.config  Run Smoothy.dll.config.config  RunSmoothy.deps.json  RunSmoothy.dll.config  error log.txt
RunSmoothy-Linux/: Program.cs  errorlog.txt  readme.md
Smoothy/: executive.js  main.js  package.json
_Smoothy/: executive.js  main.js
commands/: change prefix.js  config.json  executive.js  help.js  jump.js  leave.js  loop.js  loopsong.js  pause.js  ping.js  play.js  previous.js  queue.js  remove.js  repeat.js  resume.js  seek.js  shuffle.js  skip.js  stop.js  volume.js
config/: global.json
functions/: embed.js
interfaces/: _CurrentSong.ts  _Global.ts  _InfoData.ts  _Queue.ts  _Song.ts
migrations/: 20240622202546_init_tables.sql
modules/: modules.js  modules.ts
patches/: @discordjs+voice+0.14.0.patch
src/: common.rs  executive.rs  lib.rs  main.rs
typescript/: executive.ts  main.js  main.ts  maps.ts  package-lock.json  package.json  tsconfig-dev.json  tsconfig.json
(+146 files in other folders)
