[package]
name = "smoothy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
dotenv = "0.15.0"
reqwest = "0.11"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "voice", "cache", "http"] }
songbird = "0.4"
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5" }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
poise = { version = "0.6.1", default-features = false, features = ["cache"] }
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio", "json", "tls-native-tls"]}
rusty_time = "1.1.0"
# futures = "0.3.30"
serde = {version = "1.0.196", features = ["derive"]}
